--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     />
-    <link rel="Title icon" href={% static 'images/contact-icon.png' %} >
+    <link rel="Title icon" href="{% static 'images/contact-icon.png' %}">
     <title>
     {% block title %}
     {% endblock title %}
